--- a/example/example_ntv_pandas.ipynb
+++ b/example/example_ntv_pandas.ipynb
@@ -77,9 +77,7 @@
    "cell_type": "code",
    "execution_count": 2,
    "id": "87e08572",
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -747,13 +745,13 @@
      "output_type": "stream",
      "text": [
       "pandas dtype :\n",
-      "dates::date     object\n",
-      "value            int64\n",
-      "value32          int32\n",
-      "res              int64\n",
-      "coord::point    object\n",
-      "names           string\n",
-      "unique            bool\n",
+      "dates::date             object\n",
+      "value                    int64\n",
+      "value32                  int32\n",
+      "res                      int64\n",
+      "coord::point            object\n",
+      "names           string[python]\n",
+      "unique                    bool\n",
       "dtype: object\n",
       "\n",
       "pandas object :\n",
@@ -808,9 +806,7 @@
    "cell_type": "code",
    "execution_count": 14,
    "id": "cdda0ce3",
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -846,9 +842,7 @@
    "cell_type": "code",
    "execution_count": 15,
    "id": "22b7a281",
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -886,22 +880,20 @@
    "cell_type": "code",
    "execution_count": 16,
    "id": "d7eb51ea",
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "pandas dtype :\n",
-      "dates::date        category\n",
-      "value              category\n",
-      "value32               int32\n",
-      "res                   int64\n",
-      "coord::point         object\n",
-      "names                string\n",
-      "unique::boolean        bool\n",
+      "dates::date              category\n",
+      "value                    category\n",
+      "value32                     int32\n",
+      "res                         int64\n",
+      "coord::point               object\n",
+      "names              string[python]\n",
+      "unique::boolean              bool\n",
       "dtype: object\n",
       "\n",
       "pandas object :\n",
@@ -956,12 +948,12 @@
      "output_type": "stream",
      "text": [
       "pandas dtype :\n",
-      "dates::date     category\n",
-      "value           category\n",
-      "value32            int32\n",
-      "coord::point      object\n",
-      "names             string\n",
-      "unique              bool\n",
+      "dates::date           category\n",
+      "value                 category\n",
+      "value32                  int32\n",
+      "coord::point            object\n",
+      "names           string[python]\n",
+      "unique                    bool\n",
       "dtype: object\n",
       "\n",
       "pandas object :\n",
@@ -1534,23 +1526,23 @@
        "  stroke: currentColor;\n",
        "  fill: currentColor;\n",
        "}\n",
-       "</style><pre class='xr-text-repr-fallback'>&lt;xarray.DataArray &#x27;price&#x27; (quantity: 2, product: 4)&gt;\n",
+       "</style><pre class='xr-text-repr-fallback'>&lt;xarray.DataArray &#x27;price&#x27; (quantity: 2, product: 4)&gt; Size: 64B\n",
        "array([[0.5, 2.0, 1.0, 1.5],\n",
        "       [5.0, 20.0, 10.0, 15.0]], dtype=object)\n",
        "Coordinates:\n",
-       "  * quantity  (quantity) object &#x27;1 kg&#x27; &#x27;10 kg&#x27;\n",
-       "  * product   (product) object &#x27;banana&#x27; &#x27;orange&#x27; &#x27;apple&#x27; &#x27;peppers&#x27;\n",
-       "    plants    (product) object &#x27;fruit&#x27; &#x27;fruit&#x27; &#x27;fruit&#x27; &#x27;vegetable&#x27;</pre><div class='xr-wrap' style='display:none'><div class='xr-header'><div class='xr-obj-type'>xarray.DataArray</div><div class='xr-array-name'>'price'</div><ul class='xr-dim-list'><li><span class='xr-has-index'>quantity</span>: 2</li><li><span class='xr-has-index'>product</span>: 4</li></ul></div><ul class='xr-sections'><li class='xr-section-item'><div class='xr-array-wrap'><input id='section-c96fa65f-93df-4f59-a913-a4f4afe0bb6a' class='xr-array-in' type='checkbox' checked><label for='section-c96fa65f-93df-4f59-a913-a4f4afe0bb6a' title='Show/hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-array-preview xr-preview'><span>0.5 2.0 1.0 1.5 5.0 20.0 10.0 15.0</span></div><div class='xr-array-data'><pre>array([[0.5, 2.0, 1.0, 1.5],\n",
-       "       [5.0, 20.0, 10.0, 15.0]], dtype=object)</pre></div></div></li><li class='xr-section-item'><input id='section-ea3ce321-cfed-43f7-a4c4-6090e3a19ff0' class='xr-section-summary-in' type='checkbox'  checked><label for='section-ea3ce321-cfed-43f7-a4c4-6090e3a19ff0' class='xr-section-summary' >Coordinates: <span>(3)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>quantity</span></div><div class='xr-var-dims'>(quantity)</div><div class='xr-var-dtype'>object</div><div class='xr-var-preview xr-preview'>&#x27;1 kg&#x27; &#x27;10 kg&#x27;</div><input id='attrs-d78004cb-0101-418b-97f6-d05b0da50a0d' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-d78004cb-0101-418b-97f6-d05b0da50a0d' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-81f27f3a-c070-4607-ac46-c36ec60edb2d' class='xr-var-data-in' type='checkbox'><label for='data-81f27f3a-c070-4607-ac46-c36ec60edb2d' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([&#x27;1 kg&#x27;, &#x27;10 kg&#x27;], dtype=object)</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>product</span></div><div class='xr-var-dims'>(product)</div><div class='xr-var-dtype'>object</div><div class='xr-var-preview xr-preview'>&#x27;banana&#x27; &#x27;orange&#x27; &#x27;apple&#x27; &#x27;peppers&#x27;</div><input id='attrs-71d1cf78-c3c7-4ac9-a6de-604cd2dee989' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-71d1cf78-c3c7-4ac9-a6de-604cd2dee989' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-f78018e4-03ed-4153-a566-7cb5a0ca4880' class='xr-var-data-in' type='checkbox'><label for='data-f78018e4-03ed-4153-a566-7cb5a0ca4880' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([&#x27;banana&#x27;, &#x27;orange&#x27;, &#x27;apple&#x27;, &#x27;peppers&#x27;], dtype=object)</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span>plants</span></div><div class='xr-var-dims'>(product)</div><div class='xr-var-dtype'>object</div><div class='xr-var-preview xr-preview'>&#x27;fruit&#x27; &#x27;fruit&#x27; &#x27;fruit&#x27; &#x27;vegetable&#x27;</div><input id='attrs-a1afc24d-2146-4920-897a-8e75585d91f6' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-a1afc24d-2146-4920-897a-8e75585d91f6' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-6b795f79-f903-4c50-8f7d-37afa9146b6e' class='xr-var-data-in' type='checkbox'><label for='data-6b795f79-f903-4c50-8f7d-37afa9146b6e' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([&#x27;fruit&#x27;, &#x27;fruit&#x27;, &#x27;fruit&#x27;, &#x27;vegetable&#x27;], dtype=object)</pre></div></li></ul></div></li><li class='xr-section-item'><input id='section-48ee75a5-24e3-4053-9fab-bf495e94b4ec' class='xr-section-summary-in' type='checkbox'  ><label for='section-48ee75a5-24e3-4053-9fab-bf495e94b4ec' class='xr-section-summary' >Indexes: <span>(2)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'><li class='xr-var-item'><div class='xr-index-name'><div>quantity</div></div><div class='xr-index-preview'>PandasIndex</div><div></div><input id='index-4dbab36f-a308-4cf9-b613-b85fdd919f20' class='xr-index-data-in' type='checkbox'/><label for='index-4dbab36f-a308-4cf9-b613-b85fdd919f20' title='Show/Hide index repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-index-data'><pre>PandasIndex(Index([&#x27;1 kg&#x27;, &#x27;10 kg&#x27;], dtype=&#x27;object&#x27;, name=&#x27;quantity&#x27;))</pre></div></li><li class='xr-var-item'><div class='xr-index-name'><div>product</div></div><div class='xr-index-preview'>PandasIndex</div><div></div><input id='index-95c0338e-0b39-4f99-922c-ced3eb27469f' class='xr-index-data-in' type='checkbox'/><label for='index-95c0338e-0b39-4f99-922c-ced3eb27469f' title='Show/Hide index repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-index-data'><pre>PandasIndex(Index([&#x27;banana&#x27;, &#x27;orange&#x27;, &#x27;apple&#x27;, &#x27;peppers&#x27;], dtype=&#x27;object&#x27;, name=&#x27;product&#x27;))</pre></div></li></ul></div></li><li class='xr-section-item'><input id='section-a4c5dfe0-bac5-4c1c-802d-15614a9ea897' class='xr-section-summary-in' type='checkbox' disabled ><label for='section-a4c5dfe0-bac5-4c1c-802d-15614a9ea897' class='xr-section-summary'  title='Expand/collapse section'>Attributes: <span>(0)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><dl class='xr-attrs'></dl></div></li></ul></div></div>"
+       "  * quantity  (quantity) object 16B &#x27;1 kg&#x27; &#x27;10 kg&#x27;\n",
+       "  * product   (product) object 32B &#x27;banana&#x27; &#x27;orange&#x27; &#x27;apple&#x27; &#x27;peppers&#x27;\n",
+       "    plants    (product) object 32B &#x27;fruit&#x27; &#x27;fruit&#x27; &#x27;fruit&#x27; &#x27;vegetable&#x27;</pre><div class='xr-wrap' style='display:none'><div class='xr-header'><div class='xr-obj-type'>xarray.DataArray</div><div class='xr-array-name'>'price'</div><ul class='xr-dim-list'><li><span class='xr-has-index'>quantity</span>: 2</li><li><span class='xr-has-index'>product</span>: 4</li></ul></div><ul class='xr-sections'><li class='xr-section-item'><div class='xr-array-wrap'><input id='section-a7e0b56a-a113-4f81-a311-f01379657e4f' class='xr-array-in' type='checkbox' checked><label for='section-a7e0b56a-a113-4f81-a311-f01379657e4f' title='Show/hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-array-preview xr-preview'><span>0.5 2.0 1.0 1.5 5.0 20.0 10.0 15.0</span></div><div class='xr-array-data'><pre>array([[0.5, 2.0, 1.0, 1.5],\n",
+       "       [5.0, 20.0, 10.0, 15.0]], dtype=object)</pre></div></div></li><li class='xr-section-item'><input id='section-94858092-974b-4b9d-a0f0-0d8a12bae18a' class='xr-section-summary-in' type='checkbox'  checked><label for='section-94858092-974b-4b9d-a0f0-0d8a12bae18a' class='xr-section-summary' >Coordinates: <span>(3)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>quantity</span></div><div class='xr-var-dims'>(quantity)</div><div class='xr-var-dtype'>object</div><div class='xr-var-preview xr-preview'>&#x27;1 kg&#x27; &#x27;10 kg&#x27;</div><input id='attrs-37316586-5a3e-41bb-8d6d-2b49de598041' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-37316586-5a3e-41bb-8d6d-2b49de598041' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-2598b814-e604-403d-915a-779f0a869ccf' class='xr-var-data-in' type='checkbox'><label for='data-2598b814-e604-403d-915a-779f0a869ccf' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([&#x27;1 kg&#x27;, &#x27;10 kg&#x27;], dtype=object)</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>product</span></div><div class='xr-var-dims'>(product)</div><div class='xr-var-dtype'>object</div><div class='xr-var-preview xr-preview'>&#x27;banana&#x27; &#x27;orange&#x27; &#x27;apple&#x27; &#x27;peppers&#x27;</div><input id='attrs-7aaa0e63-30bf-48af-ac9b-11b5f5e28d97' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-7aaa0e63-30bf-48af-ac9b-11b5f5e28d97' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-766696ef-0d08-4426-8c3b-ed460c141037' class='xr-var-data-in' type='checkbox'><label for='data-766696ef-0d08-4426-8c3b-ed460c141037' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([&#x27;banana&#x27;, &#x27;orange&#x27;, &#x27;apple&#x27;, &#x27;peppers&#x27;], dtype=object)</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span>plants</span></div><div class='xr-var-dims'>(product)</div><div class='xr-var-dtype'>object</div><div class='xr-var-preview xr-preview'>&#x27;fruit&#x27; &#x27;fruit&#x27; &#x27;fruit&#x27; &#x27;vegetable&#x27;</div><input id='attrs-c29ffbbe-b075-4c64-8d94-41dc456f16e4' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-c29ffbbe-b075-4c64-8d94-41dc456f16e4' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-63e3a7df-302f-42d5-ae0c-8d1d6d9c8abf' class='xr-var-data-in' type='checkbox'><label for='data-63e3a7df-302f-42d5-ae0c-8d1d6d9c8abf' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([&#x27;fruit&#x27;, &#x27;fruit&#x27;, &#x27;fruit&#x27;, &#x27;vegetable&#x27;], dtype=object)</pre></div></li></ul></div></li><li class='xr-section-item'><input id='section-469a3e41-21ba-463d-84f6-84ef86886119' class='xr-section-summary-in' type='checkbox'  ><label for='section-469a3e41-21ba-463d-84f6-84ef86886119' class='xr-section-summary' >Indexes: <span>(2)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'><li class='xr-var-item'><div class='xr-index-name'><div>quantity</div></div><div class='xr-index-preview'>PandasIndex</div><div></div><input id='index-e634a95e-bc30-47ec-9975-c0da0eab8f28' class='xr-index-data-in' type='checkbox'/><label for='index-e634a95e-bc30-47ec-9975-c0da0eab8f28' title='Show/Hide index repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-index-data'><pre>PandasIndex(Index([&#x27;1 kg&#x27;, &#x27;10 kg&#x27;], dtype=&#x27;object&#x27;, name=&#x27;quantity&#x27;))</pre></div></li><li class='xr-var-item'><div class='xr-index-name'><div>product</div></div><div class='xr-index-preview'>PandasIndex</div><div></div><input id='index-967fbb0c-ca50-4a2d-8811-f88a641e7206' class='xr-index-data-in' type='checkbox'/><label for='index-967fbb0c-ca50-4a2d-8811-f88a641e7206' title='Show/Hide index repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-index-data'><pre>PandasIndex(Index([&#x27;banana&#x27;, &#x27;orange&#x27;, &#x27;apple&#x27;, &#x27;peppers&#x27;], dtype=&#x27;object&#x27;, name=&#x27;product&#x27;))</pre></div></li></ul></div></li><li class='xr-section-item'><input id='section-e997fb6a-5a74-494a-b9ab-9f48c7bb8fe6' class='xr-section-summary-in' type='checkbox' disabled ><label for='section-e997fb6a-5a74-494a-b9ab-9f48c7bb8fe6' class='xr-section-summary'  title='Expand/collapse section'>Attributes: <span>(0)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><dl class='xr-attrs'></dl></div></li></ul></div></div>"
       ],
       "text/plain": [
-       "<xarray.DataArray 'price' (quantity: 2, product: 4)>\n",
+       "<xarray.DataArray 'price' (quantity: 2, product: 4)> Size: 64B\n",
        "array([[0.5, 2.0, 1.0, 1.5],\n",
        "       [5.0, 20.0, 10.0, 15.0]], dtype=object)\n",
        "Coordinates:\n",
-       "  * quantity  (quantity) object '1 kg' '10 kg'\n",
-       "  * product   (product) object 'banana' 'orange' 'apple' 'peppers'\n",
-       "    plants    (product) object 'fruit' 'fruit' 'fruit' 'vegetable'"
+       "  * quantity  (quantity) object 16B '1 kg' '10 kg'\n",
+       "  * product   (product) object 32B 'banana' 'orange' 'apple' 'peppers'\n",
+       "    plants    (product) object 32B 'fruit' 'fruit' 'fruit' 'vegetable'"
       ]
      },
      "execution_count": 19,
@@ -1587,9 +1579,7 @@
    "cell_type": "code",
    "execution_count": 20,
    "id": "5f07553d",
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -1790,9 +1780,7 @@
    "cell_type": "code",
    "execution_count": 23,
    "id": "fc5c1c1f",
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -1863,7 +1851,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.11.8"
   }
  },
  "nbformat": 4,
