--- a/example/example_json_pandas.ipynb
+++ b/example/example_json_pandas.ipynb
@@ -30,13 +30,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "id": "d00a0cb6",
    "metadata": {},
    "outputs": [],
    "source": [
     "import math\n",
     "from pprint import pprint\n",
+    "from io import StringIO\n",
     "\n",
     "import pandas as pd\n",
     "from shapely.geometry import Point\n",
@@ -63,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "id": "5dea32e4",
    "metadata": {},
    "outputs": [
@@ -79,7 +80,7 @@
     }
    ],
    "source": [
-    "df = pd.read_json('{\"test integer\":[1,2,3], \"test string\": [\"a\", \"b\", \"c\"]}')\n",
+    "df = pd.read_json(StringIO('{\"test integer\":[1,2,3], \"test string\": [\"a\", \"b\", \"c\"]}'))\n",
     "print(df)\n",
     "# but it is impossible with to_json() to recreate the initial data"
    ]
@@ -134,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "id": "810eb785",
    "metadata": {},
    "outputs": [
@@ -142,16 +143,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "test int32    int64\n",
+      "test integer     int64\n",
+      "test string     object\n",
       "dtype: object\n",
       "\n",
-      "is Json translation reversible ?  False\n"
+      "is Json translation reversible ?  True\n"
      ]
     }
    ],
    "source": [
     "# 'int32' is lost in json-table interface\n",
-    "df2 = pd.read_json(df.to_json(orient='table'), orient='table')\n",
+    "df2 = pd.read_json(StringIO(df.to_json(orient='table')), orient='table')\n",
     "print(df2.dtypes)\n",
     "print('\\nis Json translation reversible ? ', df.equals(df2))"
    ]
@@ -166,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "id": "8f28a6b6",
    "metadata": {},
    "outputs": [
@@ -187,14 +189,14 @@
    "source": [
     "df = pd.DataFrame(pd.Series([10,20], name='test float64', dtype='float64'))\n",
     "print(df.dtypes, '\\n')\n",
-    "df2 = pd.read_json(df.to_json(orient='records'), orient='records')\n",
+    "df2 = pd.read_json(StringIO(df.to_json(orient='records')), orient='records')\n",
     "print(df2.dtypes)\n",
     "print('\\nis Json translation reversible ? ', df.equals(df2))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "id": "c64c287e",
    "metadata": {},
    "outputs": [
@@ -215,7 +217,7 @@
    "source": [
     "sr = pd.Series([math.nan,math.nan], name='nan')\n",
     "print(sr.dtype, '\\n')\n",
-    "sr2 = pd.read_json(sr.to_json(), typ='series')\n",
+    "sr2 = pd.read_json(StringIO(sr.to_json()), typ='series')\n",
     "print(sr2)\n",
     "print('\\nis Json translation reversible ? ', sr.equals(sr2))"
    ]
@@ -230,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 19,
    "id": "3e11b78a",
    "metadata": {},
    "outputs": [
@@ -256,7 +258,7 @@
     "print(dfd.to_json(default_handler=date.isoformat), '\\n')\n",
     "print(dfd.to_json(orient='table'), '\\n')\n",
     "\n",
-    "dfd2 = pd.read_json(dfd.to_json(orient='table'), orient='table')\n",
+    "dfd2 = pd.read_json(StringIO(dfd.to_json(orient='table')), orient='table')\n",
     "print(dfd2)\n",
     "\n",
     "print('\\nis Json translation reversible ? ', dfd.equals(dfd2))"
@@ -264,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 20,
    "id": "05cd6fdb",
    "metadata": {},
    "outputs": [
@@ -293,7 +295,7 @@
     "print(dfd, '\\n')\n",
     "print(dfd.to_json(), '\\n')\n",
     "print(dfd.to_json(orient='table'), '\\n')\n",
-    "dfd2 = pd.read_json(dfd.to_json(orient='table'), orient='table')\n",
+    "dfd2 = pd.read_json(StringIO(dfd.to_json(orient='table')), orient='table')\n",
     "print(dfd2)\n",
     "print('\\nis Json translation reversible ? ', dfd.equals(dfd2))"
    ]
@@ -344,9 +346,9 @@
      "output_type": "stream",
      "text": [
       "CSV data :\n",
-      " ,test dates,test times\r\n",
-      "0,2021-10-02,10:10:02\r\n",
-      "1,2021-10-04,11:10:04\r\n",
+      " ,test dates,test times\n",
+      "0,2021-10-02,10:10:02\n",
+      "1,2021-10-04,11:10:04\n",
       "\n",
       "JSON data :\n",
       " {\"test dates\":{\"0\":1633132800000,\"1\":1633305600000},\"test times\":{\"0\":\"10:10:02\",\"1\":\"11:10:04\"}}\n",
@@ -374,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "db842b75",
    "metadata": {},
    "outputs": [
@@ -390,8 +392,8 @@
       "4  1985-02-05    30  hector   True\n",
       "5  2022-01-21    30   maria   True \n",
       "\n",
-      "{\":tab\": {\"index\": [0, 1, 2, 3, 4, 5], \"dates\": [[\"1964-01-01\", \"1985-02-05\", \"2022-01-21\"], [1]], \"value\": [[10, 20, 30], [2]], \"names\": [[\"eric\", \"hector\", \"john\", \"judith\", \"maria\", \"mila\"], [2, 0, 3, 5, 1, 4]], \"unique\": [[true], [0]]}}\n",
-      "240 \n",
+      "{':tab': {'index': [0, 1, 2, 3, 4, 5], 'dates': [['1964-01-01', '1985-02-05', '2022-01-21'], [1]], 'value': [[10, 20, 30], [2]], 'names': [['eric', 'hector', 'john', 'judith', 'maria', 'mila'], [2, 0, 3, 5, 1, 4]], 'unique': [[True], [6]]}}\n",
+      "1 \n",
       "\n",
       "{\"schema\":{\"fields\":[{\"name\":\"index\",\"type\":\"integer\"},{\"name\":\"dates\",\"type\":\"any\",\"constraints\":{\"enum\":[\"1964-01-01\",\"1985-02-05\",\"2022-01-21\"]},\"ordered\":false},{\"name\":\"value\",\"type\":\"any\",\"constraints\":{\"enum\":[10,20,30]},\"ordered\":false},{\"name\":\"names\",\"type\":\"any\",\"constraints\":{\"enum\":[\"eric\",\"hector\",\"john\",\"judith\",\"maria\",\"mila\"]},\"ordered\":false},{\"name\":\"unique\",\"type\":\"boolean\",\"constraints\":{\"enum\":[true]},\"ordered\":false}],\"primaryKey\":[\"index\"],\"pandas_version\":\"1.4.0\"},\"data\":[{\"index\":0,\"dates\":\"1964-01-01\",\"value\":10,\"names\":\"john\",\"unique\":true},{\"index\":1,\"dates\":\"1985-02-05\",\"value\":10,\"names\":\"eric\",\"unique\":true},{\"index\":2,\"dates\":\"2022-01-21\",\"value\":20,\"names\":\"judith\",\"unique\":true},{\"index\":3,\"dates\":\"1964-01-01\",\"value\":20,\"names\":\"mila\",\"unique\":true},{\"index\":4,\"dates\":\"1985-02-05\",\"value\":30,\"names\":\"hector\",\"unique\":true},{\"index\":5,\"dates\":\"2022-01-21\",\"value\":30,\"names\":\"maria\",\"unique\":true}]}\n",
       "946 \n",
@@ -545,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 24,
    "id": "a435e4b5",
    "metadata": {},
    "outputs": [
@@ -558,18 +560,18 @@
       "False {'name': 'test', 'type': 'integer'} int64\n",
       "False {'name': 'test', 'type': 'integer'} int64\n",
       "True {'name': 'test', 'type': 'integer'} int64\n",
-      "False {'name': 'test', 'type': 'integer', 'extDtype': 'Int64'} int64\n",
-      "False {'name': 'test', 'type': 'integer', 'extDtype': 'UInt64'} int64\n",
+      "True {'name': 'test', 'type': 'integer', 'extDtype': 'Int64'} Int64\n",
+      "True {'name': 'test', 'type': 'integer', 'extDtype': 'UInt64'} UInt64\n",
       "True {'name': 'test', 'type': 'number'} float64\n",
-      "False {'name': 'test', 'type': 'number', 'extDtype': 'Float32'} float64\n",
+      "True {'name': 'test', 'type': 'number', 'extDtype': 'Float32'} Float32\n",
       "False {'name': 'test', 'type': 'number'} float64\n",
       "True {'name': 'test', 'type': 'number'} float64\n",
-      "False {'name': 'test', 'type': 'number', 'extDtype': 'Sparse[float64, nan]'} float64\n",
+      "True {'name': 'test', 'type': 'number', 'extDtype': 'Sparse[float64, nan]'} Sparse[float64, nan]\n",
       "True {'name': 'test', 'type': 'datetime'} datetime64[ns]\n",
       "True {'name': 'test', 'type': 'datetime', 'tz': 'UTC'} datetime64[ns, UTC]\n",
       "True {'name': 'test', 'type': 'any', 'constraints': {'enum': ['2020-01-01']}, 'ordered': False} category\n",
       "False {'name': 'test', 'type': 'any', 'constraints': {'enum': ['2020-01-01T00:00:00.000']}, 'ordered': False} category\n",
-      "False {'name': 'test', 'type': 'boolean', 'extDtype': 'boolean'} bool\n",
+      "True {'name': 'test', 'type': 'boolean', 'extDtype': 'boolean'} boolean\n",
       "True {'name': 'test', 'type': 'boolean'} bool\n",
       "False {'name': 'test', 'type': 'string'} object\n"
      ]
@@ -603,8 +605,8 @@
     "for df_data in data:\n",
     "    df = pd.DataFrame(df_data[0], **df_data[1]) if len(df_data) == 2 else pd.DataFrame(df_data[0])\n",
     "    js = df.to_json(orient='table')\n",
-    "    df2 = pd.read_json(js, orient='table')\n",
-    "    print(df.equals(df2), json.loads(js)['schema']['fields'][1], df2.dtypes[0])"
+    "    df2 = pd.read_json(StringIO(js), orient='table')\n",
+    "    print(df.equals(df2), json.loads(js)['schema']['fields'][1], df2.dtypes.iloc[0])"
    ]
   }
  ],
@@ -624,7 +626,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.11.8"
   }
  },
  "nbformat": 4,
