--- a/example/example_xarray.ipynb
+++ b/example/example_xarray.ipynb
@@ -17,29 +17,31 @@
     "\n",
     "It shows that :\n",
     "- data can simply be represented in multidimensional format and used in Xarray\n",
-    "- the multidimensional JSON format is the most compact of the usual formats (tabular JSON, csv and even parquet),"
+    "- the multidimensional JSON format is the most compact of the usual formats (tabular JSON, CSV and even Parquet)."
    ]
   },
   {
    "cell_type": "markdown",
    "id": "d4d247a5-0273-4026-ae99-ead4cd957f38",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
-    "## description of the example\n",
+    "## use case description\n",
     "\n",
-    "Sensors are installed in five french cities (lille, toulouse, marseille, strasbourg, brest) and measure air quality during ten days.\n",
-    "The measurement is the hourly mean of pollutants concentration (PM10, PM2.5, NO2, O3, CO).\n",
+    "Sensors are installed in five French cities (lille, toulouse, marseille, strasbourg, brest) and measure air quality for ten days.\n",
+    "The measurement is the hourly average of pollutant concentrations (PM10, PM2.5, NO2, O3, CO).\n",
     "\n",
-    "The result of the acquisition is a table where fields are:\n",
+    "The result of the acquisition is a table where the fields are:\n",
     "\n",
     "- camp : description of the campaign\n",
-    "- date : date of the measurement\n",
-    "- hour : hour of the measurement\n",
-    "- city : location of the sensor\n",
-    "- coord : coordinate of the sensor\n",
+    "- date : date of measurement\n",
+    "- hour : hour of measurement\n",
+    "- city : sensor location\n",
+    "- coord : sensor coordinate\n",
     "- prop : measured property\n",
-    "- unit : unit of the measurement\n",
-    "- value : value of the measurement"
+    "- unit : unit of measurement\n",
+    "- value : value of measurement"
    ]
   },
   {
@@ -294,7 +296,9 @@
    "id": "3c4ff8af-ff61-44a5-8665-7110a770eaf1",
    "metadata": {},
    "source": [
-    "## Multidimensional representation"
+    "## Multidimensional representation\n",
+    "\n",
+    "The DataFrame is simply converted to an Xarray."
    ]
   },
   {
@@ -797,7 +801,7 @@
    "source": [
     "## data size\n",
     "\n",
-    "The multidimensional JSON size is lower than tabular JSON size, csv size and parquet size"
+    "The multidimensional JSON size is smaller than the tabular JSON size, csv size and parquet size"
    ]
   },
   {
@@ -840,7 +844,6 @@
     "           'pd.to_csv': len(meas_df_1.to_csv()),\n",
     "           'pd.to_parquet': os.path.getsize('meas_1.parquet'),\n",
     "           'nxr.to_json': len(meas_js_1)}\n",
-    "\n",
     "size_1"
    ]
   },
