--- a/example/xarray_pandas_converter.ipynb
+++ b/example/xarray_pandas_converter.ipynb
@@ -8,9 +8,11 @@
     "# Xarray - Pandas converter\n",
     "---------------------------\n",
     "\n",
-    "This example is the example used in Xarray user-guide (section [\"working with pandas\"](https://docs.xarray.dev/en/stable/user-guide/pandas.html)).\n",
+    "This Notebook uses the example used in Xarray user-guide (section [\"working with pandas\"](https://docs.xarray.dev/en/stable/user-guide/pandas.html)) to show how the ntv_pandas converter complements the existing Xarray interface.\n",
     "\n",
-    "A more complete example is in the [other Notebook](https://nbviewer.org/github/loco-philippe/ntv-pandas/blob/main/example/example_multidimensional.ipynb)."
+    "A [simple use case](https://nbviewer.org/github/loco-philippe/ntv-pandas/blob/main/example/example_multidimensional.ipynb) shows the advantage of multidimensional representation (conversion Xarray of a dataset, optimization of data size).\n",
+    "\n",
+    "A [third example](https://nbviewer.org/github/loco-philippe/ntv-pandas/blob/main/example/example_multidimensional.ipynb) shows how the hidden multidimensional structure of a tabular dataset can be revealed."
    ]
   },
   {
