--- a/tests/test_perf.ipynb
+++ b/tests/test_perf.ipynb
@@ -1,6 +1,65 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "09e9962f-04a5-423b-b10d-ce431fccf085",
+   "metadata": {},
+   "source": [
+    "# Table representation\n",
+    "\n",
+    "This Notebook compares the size of table representation for the most common Table structures.\n",
+    "Representation uased are CSV, JSON, PARQUET"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b9ce00dd-d612-4ffc-acc5-e9dfe168c862",
+   "metadata": {},
+   "source": [
+    "## tree and multidimensional patterns"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a9247d13-a1b0-4b33-af74-eab3c48511ac",
+   "metadata": {},
+   "source": [
+    "Tables contain to kind of columns:\n",
+    "\n",
+    "- variables (values) : columns with unstructured data\n",
+    "- indexes (coordinates) : columns with data used to select or filter variables data\n",
+    "\n",
+    "Two basic patterns are present in Tables indexes :\n",
+    "\n",
+    "- Tree pattern: A tree is represented in tabular form by a list of paths between each leaf and the node. The columns then represent the levels of the tree.\n",
+    "- Multidimensional pattern: A matrix (or multidimensional data) is represented in tabular form by a column of the values of the matrix and additional columns represent the coordinates of each of the values.\n",
+    "\n",
+    "Table 1 presents an example of binary tree.\n",
+    "\n",
+    "| Root | level 1 | level 2 | value |\n",
+    "|------|---------|---------|-------|\n",
+    "| A    | B       | D       |1      |\n",
+    "| A    | B       | E       |2      |\n",
+    "| A    | C       | F       |3      |\n",
+    "| A    | C       | G       |4      |\n",
+    "\n",
+    "*Table 1: Tree pattern*\n",
+    "\n",
+    "Table 2 presents an example of matrix\n",
+    "\n",
+    "| Value | row | col |\n",
+    "|-------|-----|-----|\n",
+    "| 1     | A   | C   |\n",
+    "| 2     | A   | D   |\n",
+    "| 3     | B   | C   |\n",
+    "| 4     | B   | D   |\n",
+    "\n",
+    "*Table 2: Multidimensional pattern*\n",
+    "\n",
+    "Taking these structures into account leads to significant duplication of data. In the general case, Datasets mix these different structures."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 59,
    "id": "7469f343",
@@ -17,88 +76,6 @@
     "import ntv_pandas as npd\n",
     "import cbor2\n",
     "import matplotlib.pyplot as plt"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 68,
-   "id": "717e496b-19c1-472c-ad67-6c9ba1b1a014",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def file_sizes(xnd, forma={}):\n",
-    "    '''calculate the size of each format'''\n",
-    "    df = xnd.to_dataframe(json_name=False, info=False).reset_index().sample(frac=1)\n",
-    "    jsn = xnd.to_json(notype='all', header=False, encoded=False, format=forma)\n",
-    "    return {'pd.to_json(values)': len(df.to_json(orient='values')),\n",
-    "            'pd.to_csv': len(df.to_csv()),\n",
-    "            'pd.to_parquet': len(df.to_parquet(engine='pyarrow')),\n",
-    "            'xnd.to_json': len(json.dumps(jsn)),\n",
-    "            'xnd.to_json(cbor)': len(cbor2.dumps(jsn))}\n",
-    "\n",
-    "def sizes_plot(sizes, titles, fig_title):\n",
-    "    '''plot the size of some format''' \n",
-    "    fig, axs = plt.subplots(1, 4, figsize=(24, 6))\n",
-    "    fig.suptitle(fig_title)\n",
-    "    for idx, (size, title) in enumerate(zip(sizes, titles)):\n",
-    "        bar_colors = ['tab:red' if val == min(size.values()) else 'tab:blue' for val in size.values()]\n",
-    "        percent = [str(round(val / list(size.values())[1] * 100, 1)) + ' %' for val in size.values()]\n",
-    "        bar_plt = axs[idx].bar(size.keys(), size.values(), color=bar_colors)\n",
-    "        axs[idx].set_title(title)\n",
-    "        axs[idx].bar_label(bar_plt, percent, label_type='center')\n",
-    "        axs[idx].tick_params(axis='x', rotation=55)\n",
-    "    plt.show()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "2d95acb2-7c8b-432e-ac23-e3d6ec04c8fe",
-   "metadata": {},
-   "source": [
-    "## "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "b9ce00dd-d612-4ffc-acc5-e9dfe168c862",
-   "metadata": {},
-   "source": [
-    "## tree and multidimensional patterns"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "a9247d13-a1b0-4b33-af74-eab3c48511ac",
-   "metadata": {},
-   "source": [
-    "Two basic patterns are present in Datasets:\n",
-    "\n",
-    "- Tree pattern: A tree is represented in tabular form by a list of paths between each leaf and the node. The columns then represent the levels of the tree.\n",
-    "- Multidimensional pattern: A matrix (or multidimensional data) is represented in tabular form by a column of the values of the matrix and additional columns represent the coordinates of each of the values.\n",
-    "\n",
-    "Table 1 presents an example of binary tree.\n",
-    "\n",
-    "| Root | level 1 | level 2 |\n",
-    "|------|---------|---------|\n",
-    "| A    | B       | D       |\n",
-    "| A    | B       | E       |\n",
-    "| A    | C       | F       |\n",
-    "| A    | C       | G       |\n",
-    "\n",
-    "*Table 1: Tree pattern*\n",
-    "\n",
-    "Table 2 presents an example of matrix\n",
-    "\n",
-    "| Value | row | col |\n",
-    "|-------|-----|-----|\n",
-    "| 1     | A   | C   |\n",
-    "| 2     | A   | D   |\n",
-    "| 3     | B   | C   |\n",
-    "| 4     | B   | D   |\n",
-    "\n",
-    "*Table 2: Multidimensional pattern*\n",
-    "\n",
-    "Taking these structures into account leads to significant duplication of data. In the general case, Datasets mix these different structures."
    ]
   },
   {
@@ -290,6 +267,37 @@
     "        xr.Dataset({\"var\": (fields, np.arange(nb2**5).reshape([nb2] * dimensions))}, coords={field: coords_str(nb2) for val, field in enumerate(fields)})] #,\n",
     "\n",
     "Xdataset.from_xarray(xdss[2]).to_dataframe(ntv_type=False, info=False).reset_index()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "id": "717e496b-19c1-472c-ad67-6c9ba1b1a014",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def file_sizes(xnd, forma={}):\n",
+    "    '''calculate the size of each format'''\n",
+    "    df = xnd.to_dataframe(json_name=False, info=False).reset_index().sample(frac=1)\n",
+    "    jsn = xnd.to_json(notype='all', header=False, encoded=False, format=forma)\n",
+    "    return {'pd.to_json(values)': len(df.to_json(orient='values')),\n",
+    "            'pd.to_csv': len(df.to_csv()),\n",
+    "            'pd.to_parquet': len(df.to_parquet(engine='pyarrow')),\n",
+    "            'xnd.to_json': len(json.dumps(jsn)),\n",
+    "            'xnd.to_json(cbor)': len(cbor2.dumps(jsn))}\n",
+    "\n",
+    "def sizes_plot(sizes, titles, fig_title):\n",
+    "    '''plot the size of some format''' \n",
+    "    fig, axs = plt.subplots(1, 4, figsize=(24, 6))\n",
+    "    fig.suptitle(fig_title)\n",
+    "    for idx, (size, title) in enumerate(zip(sizes, titles)):\n",
+    "        bar_colors = ['tab:red' if val == min(size.values()) else 'tab:blue' for val in size.values()]\n",
+    "        percent = [str(round(val / list(size.values())[1] * 100, 1)) + ' %' for val in size.values()]\n",
+    "        bar_plt = axs[idx].bar(size.keys(), size.values(), color=bar_colors)\n",
+    "        axs[idx].set_title(title)\n",
+    "        axs[idx].bar_label(bar_plt, percent, label_type='center')\n",
+    "        axs[idx].tick_params(axis='x', rotation=55)\n",
+    "    plt.show()"
    ]
   },
   {
